// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AWSEC2Provider where there is an instance creates table 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "amountOfBlockDevices": 2,
              "annotations": {
                "amazon.com/ec2-instance-id": "asdf",
                "backstage.io/managed-by-location": "aws-ec2-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-ec2-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/ec2/v2/home",
              },
              "instanceCpuCores": 4,
              "instanceCpuThreadsPerCode": 2,
              "instancePlacement": "us-east-1a",
              "instancePlatform": "Windows",
              "instanceType": "t3.large",
              "labels": {
                "Name": "test-instance",
                "owner": "team-platform",
                "something": "something--something",
              },
              "monitoringState": "enabled",
              "name": "asdf",
              "reservationId": "reservation1",
              "title": "test-instance",
            },
            "spec": {
              "owner": "team-platform",
              "type": "ec2-instance",
            },
          },
          "locationKey": "aws-ec2-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;

exports[`AWSEC2Provider where there is an instance creates table with a template 1`] = `
[
  [
    {
      "entities": [
        {
          "entity": {
            "apiVersion": "backstage.io/v1beta1",
            "kind": "Resource",
            "metadata": {
              "annotations": {
                "amazon.com/ec2-instance-id": "asdf",
                "backstage.io/managed-by-location": "aws-ec2-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/managed-by-origin-location": "aws-ec2-provider-0:arn:aws:iam::123456789012:role/role1",
                "backstage.io/view-url": "https://eu-west-1.console.aws.amazon.com/ec2/v2/home",
              },
              "name": "asdf",
              "title": "asdf",
            },
            "spec": {
              "type": "ec2-instance",
            },
          },
          "locationKey": "aws-ec2-provider-0",
        },
      ],
      "type": "full",
    },
  ],
]
`;
